mdapi/Custom/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Development_Phase__c</fullName>
        <label>Development Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beta Development</fullName>
                </value>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                </value>
                <value>
                    <fullName>Phase III</fullName>
                </value>
                <value>
                    <fullName>Phase IV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party SF User Integration</fullName>
                </value>
                <value>
                    <fullName>Acquisition Analysis</fullName>
                </value>
                <value>
                    <fullName>Acquisition Assumptions</fullName>
                </value>
                <value>
                    <fullName>BI Integration</fullName>
                </value>
                <value>
                    <fullName>Box Integration</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Statement Build</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Data Change Request Utility</fullName>
                </value>
                <value>
                    <fullName>G2 Maps Configuration</fullName>
                </value>
                <value>
                    <fullName>Phase 1: Sandbox to Production</fullName>
                </value>
                <value>
                    <fullName>Photo Display</fullName>
                </value>
                <value>
                    <fullName>Profiles</fullName>
                </value>
                <value>
                    <fullName>Project Management Tool</fullName>
                </value>
                <value>
                    <fullName>Property Object</fullName>
                </value>
                <value>
                    <fullName>Property Object Filtering</fullName>
                </value>
                <value>
                    <fullName>Property Object Validation Rules</fullName>
                </value>
                <value>
                    <fullName>Regions Setup</fullName>
                </value>
                <value>
                    <fullName>Rehab Dashboards</fullName>
                </value>
                <value>
                    <fullName>Status Apex Triggers</fullName>
                </value>
                <value>
                    <fullName>Status Tags</fullName>
                </value>
                <value>
                    <fullName>User Management</fullName>
                </value>
                <value>
                    <fullName>Workflow Process Automation</fullName>
                </value>
                <value>
                    <fullName>Yardi Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Completion_Date__c</fullName>
        <label>Required Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SIR_ID__c</fullName>
        <label>SIR ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIR_Status__c</fullName>
        <label>SIR Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>